<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.duckduckv1_0.Setup">

    <RadioButton
        android:id="@+id/setup_btn_radio_E"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="end"
        android:hint="@string/setupRes_btn_radio_E"
        android:onClick="selectOneDifficulty"
        android:text="EASY "
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/setup_btn_radio_M"
        app:layout_constraintRight_toLeftOf="@+id/setup_btn_radio_M" />

    <RadioButton
        android:id="@+id/setup_btn_radio_M"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginBottom="22dp"
        android:layout_marginTop="8dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="end"
        android:hint="@string/setupRes_btn_radio_M"
        android:onClick="selectOneDifficulty"
        android:text="MEDIUM "
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/setup_btn_radio_EX"
        app:layout_constraintRight_toRightOf="@+id/setup_btn_radio_EX"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.944" />

    <RadioButton
        android:id="@+id/setup_btn_radio_H"
        android:layout_width="80dp"
        android:layout_height="33dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="end"
        android:hint="@string/setupRes_btn_radio_H"
        android:onClick="selectOneDifficulty"
        android:text="HARD "
        android:textAlignment="textEnd"
        android:textSize="12sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/setup_btn_radio_EX"
        app:layout_constraintRight_toLeftOf="@+id/setup_btn_radio_EX" />

    <RadioButton
        android:id="@+id/setup_btn_radio_EX"
        android:layout_width="90dp"
        android:layout_height="33dp"
        android:layout_marginEnd="73dp"
        android:layout_marginRight="73dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="end"
        android:hint="@string/setupRes_btn_radio_EX"
        android:onClick="selectOneDifficulty"
        android:text="EXPERT "
        android:textAlignment="textEnd"
        android:textSize="12sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.472" />

    <RadioButton
        android:id="@+id/setup_btn_radio_2X2"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="center"
        android:hint="@string/setupRes_btn_radio_2X2"
        android:onClick="selectOneSize"
        android:text="2X2"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/setup_btn_radio_3X3"
        app:layout_constraintRight_toLeftOf="@+id/setup_btn_radio_3X3" />

    <RadioButton
        android:id="@+id/setup_btn_radio_3X3"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="center"
        android:hint="@string/setupRes_btn_radio_3X3"
        android:onClick="selectOneSize"
        android:text="3X3"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/setup_btn_radio_4X4"
        app:layout_constraintRight_toLeftOf="@+id/setup_btn_radio_4X4" />

    <RadioButton
        android:id="@+id/setup_btn_radio_4X4"
        android:layout_width="105dp"
        android:layout_height="32dp"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="380dp"
        android:button="@null"
        android:drawableEnd="@android:drawable/btn_radio"
        android:drawableRight="@android:drawable/btn_radio"
        android:gravity="center"
        android:hint="@string/setupRes_btn_radio_4X4"
        android:onClick="selectOneSize"
        android:text="4X4"
        android:textSize="20sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setup_textView1"
        android:layout_width="278dp"
        android:layout_height="73dp"
        android:layout_marginEnd="41dp"
        android:layout_marginRight="41dp"
        android:layout_marginTop="47dp"
        android:hint="@string/setupRes_textView1"
        android:lineSpacingExtra="10sp"
        android:text="Please Choose a Difficulty Level"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/setup_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="11dp"
        android:hint="@string/setupRes_textView2"
        android:text="*The difficulty setting determines how quickly squares turn red"
        android:textSize="10sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.39"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setup_textView1" />

    <TextView
        android:id="@+id/setup_textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:hint="@string/setupRes_textView3"
        android:lineSpacingExtra="10sp"
        android:text="Please choose an initial grid size"
        android:textAlignment="center"
        android:textSize="26sp"
        android:textStyle="bold"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/setup_btn_radio_3X3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <Button
        android:id="@+id/setup_btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="430dp"
        android:hint="@string/setupRes_btn_play"
        android:onClick="startGame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/width_getter"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="8dp" />


</android.support.constraint.ConstraintLayout>
